[tool.poetry]
name = "neclib"
version = "0.14.0"
description = "Pure Python tools for NECST."
license = "MIT"
readme = "README.md"
authors = ["KaoruNishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
homepage = "https://necst-telescope.github.io/neclib/"
repository = "https://github.com/necst-telescope/neclib"

[tool.poetry.dependencies]
python = "^3.8"
astropy = "^5.0.4"
necstdb = "^0.2.8"
numpy = "^1.22"
ogameasure = "^0.5.4"
pyinterface = { version = "^1.6", markers = "sys_platform == 'linux'" }
tomlkit = "^0.11.4"

[tool.poetry.dev-dependencies]
black = "^22.4"
flake8 = "^3.8"
ipykernel = "^5.3"
isort = "^5.10.1"
myst-parser = "^0.18.0"
notebook = "^6.4"
pydata-sphinx-theme = "^0.11.0"
pytest = "^7.2.0"
pytest-cov = "^3.0.0"
pytest-xdist = "^3.0.2"
sphinx = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
