[tool.poetry]
name = "neclib"
version = "0.25.2"
description = "Pure Python tools for NECST."
license = "MIT"
readme = "README.md"
authors = ["KaoruNishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
homepage = "https://necst-telescope.github.io/neclib/"
repository = "https://github.com/necst-telescope/neclib"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
astropy = "^5.3"
matplotlib = "^3.6.2"
necstdb = "^0.2.9"
numpy = "1.24"
ogameasure = "^0.5.11"
psutil = "^5.9.4"
pyinterface = { version = "^1.6", markers = "sys_platform == 'linux'" }
tomlkit = "^0.11.4"
xfftspy = "^0.1.3"
pyerfa = "^2.0.0.3"
scipy = "^1.11.3"
pandas = "<2.0"

[tool.poetry.dev-dependencies]
black = "^22.4"
flake8 = "^5.0"
ipykernel = "^6.21"
isort = "^5.12"
myst-parser = "^0.18.0"
notebook = "^6.4"
pydata-sphinx-theme = "^0.12.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-httpserver = "^1.0.6"
pytest-xdist = "^3.0.2"
sphinx = "^5.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
