[tool.poetry]
name = "neclib"
version = "1.0.2"
description = "Pure Python tools for NECST."
license = "MIT"
readme = "README.md"
authors = ["Kaoru Nishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
homepage = "https://necst-telescope.github.io/neclib/"
repository = "https://github.com/necst-telescope/neclib"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = ">=1.26.4,<3.0"
scipy = ">=1.11.3,<2.0"
pandas = ">=2.0,<3.0"
astropy = ">=6.0,<7.0"
pyerfa = ">=2.0.1,<3.0"
matplotlib = ">=3.8,<4.0"
necstdb = { path = "C:/Users/ryoku/necstdb/", develop = true }
ogameasure = "^0.6.1"
xfftspy = "^0.1.3"

# ユーティリティ
psutil = ">=5.9.4,<6.0"
tomlkit = ">=0.11.4,<1.0"

# Linux 固有
pyinterface = { version = "^1.7.5", markers = "sys_platform == 'linux'" }

[tool.poetry.group.dev.dependencies]
black = "^24.3"
isort = "^5.12"
flake8 = "^7.0"
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-xdist = "^3.5"
ipykernel = "^6.29"
notebook = "^7.0"
sphinx = "^7.2"
pydata-sphinx-theme = "^0.16"
myst-parser = "^2.0"
pygments = "^2.17"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
